fase de testes V1.0
projeto completo, iniciando ajustes e testes.

--- a/View/Listar/ListarCarros.xaml
+++ b/View/Listar/ListarCarros.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:estacionamentoApp.View.Listar"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" Loaded="UserControl_Loaded">
     <Grid>
         <DataGrid AutoGenerateColumns="False"  CanUserAddRows="False" x:Name="dtgCarro" HorizontalAlignment="Left" Height="430" Margin="10,10,0,0" VerticalAlignment="Top" Width="790">
 
