--- a/View/Cadastro/CadastrarCliente.xaml
+++ b/View/Cadastro/CadastrarCliente.xaml
@@ -18,6 +18,8 @@
         <Label x:Name="label3" Content="Telefone" HorizontalAlignment="Left" Margin="33,152,0,0" VerticalAlignment="Top" Height="36" Width="79"/>
         <Label x:Name="label4" Content="Idade" HorizontalAlignment="Left" Margin="33,185,0,0" VerticalAlignment="Top" Height="37" Width="79"/>
         <Button x:Name="btnCadastrar" Content="Cadastrar" Margin="33,257,509,77" VerticalAlignment="Center" Width="120" HorizontalAlignment="Center" Height="24" Background="#FFF0A727" BorderBrush="{x:Null}" RenderTransformOrigin="0,0.5" Click="BtnCadastrar_Click"/>
+        <TextBox x:Name="txtSexo" HorizontalAlignment="Left" Height="32" Margin="140,233,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="165"/>
+        <Label x:Name="label4_Copy" Content="Sexo" HorizontalAlignment="Left" Margin="33,227,0,0" VerticalAlignment="Top" Height="37" Width="79"/>
 
     </Grid>
 </UserControl>
