--- a/View/EntradaVeiculo.xaml
+++ b/View/EntradaVeiculo.xaml
@@ -19,18 +19,23 @@
 
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="btnFecharCarro" Content="Fechar" HorizontalAlignment="Left" Margin="183,334,0,0" VerticalAlignment="Top" Width="75" Click="BtnFecharCarro_Click" />
-        <Label x:Name="label_Copy" Content="Fechar conta" HorizontalAlignment="Left" Margin="180,269,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnEstacionar" Content="Estacionar" HorizontalAlignment="Left" Margin="18,334,0,0" VerticalAlignment="Top" Width="75" Click="BtnEstacionar_Click"/>
-        <Label x:Name="label_Copy1" Content="Estacionar Carro PLACA" HorizontalAlignment="Left" Margin="0,269,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtPLACAcarro" HorizontalAlignment="Left" Height="23" Margin="0,300,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="lblPlaca" Content="PLACA" HorizontalAlignment="Left" Margin="198,300,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label" Content="Hora Entrada" HorizontalAlignment="Left" Margin="325,269,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblHE" Content="HORA" HorizontalAlignment="Left" Margin="341,295,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label2" Content="Hora Saida" HorizontalAlignment="Left" Margin="329,325,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblHS" Content="HORA" HorizontalAlignment="Left" Margin="341,351,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label4" Content="Total até o momento" HorizontalAlignment="Left" Margin="520,299,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblTotal" Content="$$$" HorizontalAlignment="Left" Margin="559,325,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnFecharCarro" Background="#FFE06E0F" Content="Fechar" HorizontalAlignment="Left" Margin="184,317,0,0" VerticalAlignment="Top" Width="75" Click="BtnFecharCarro_Click" />
+        <Label x:Name="label_Copy" Content="Fechar conta" HorizontalAlignment="Left" Margin="181,252,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnEstacionar" Background="#FFE06E0F" Content="Estacionar" HorizontalAlignment="Left" Margin="19,317,0,0" VerticalAlignment="Top" Width="75" Click="BtnEstacionar_Click"/>
+        <Label x:Name="label_Copy1" Content="Estacionar Carro PLACA" HorizontalAlignment="Left" Margin="1,252,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtPLACAcarro" HorizontalAlignment="Left" Height="23" Margin="1,283,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="lblPlaca" Content="PLACA" HorizontalAlignment="Left" Margin="199,283,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label" Content="Hora Entrada" HorizontalAlignment="Left" Margin="326,252,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblHE" Content="HORA" HorizontalAlignment="Left" Margin="342,278,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label2" Content="Hora Saida" HorizontalAlignment="Left" Margin="330,308,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblHS" Content="HORA" HorizontalAlignment="Left" Margin="342,334,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label4" Content="Total até o momento" HorizontalAlignment="Left" Margin="521,282,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblTotal" Content="$$$" HorizontalAlignment="Left" Margin="560,308,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label1" Content="ID registro" HorizontalAlignment="Left" Margin="326,360,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblID" Content="ID" HorizontalAlignment="Left" Margin="397,360,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnCalcula" Background="#FFE06E0F" Content="Calcula Valor" HorizontalAlignment="Left" Margin="184,345,0,0" VerticalAlignment="Top" Width="75" Click="BtnCalcula_Click"/>
+        <Label x:Name="label3" Content="Vagas Livres" HorizontalAlignment="Left" Margin="20,347,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblVagasLivres" Content="x" HorizontalAlignment="Left" Margin="51,373,0,0" VerticalAlignment="Top"/>
 
 
     </Grid>
